# Root

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Docs/Core/: 01_PRD.md  02_TECH_SPEC.md  03_ARCHITECTURE.md  04_UX_FLOWS.md  05_IMPLEMENTATION_PLAN.md  06_AGENT_SKILL_SPEC.md
Docs/Nix/: V0_2_2_NIX_COMMAND_AUDIT.md  V0_2_2_NIX_RELIABILITY_NOTES.md
Docs/Performance/: V0_2_1_BASELINE.md  V0_2_1_PERFORMANCE_NOTES.md
Docs/Platform/: Linux_Compatibility.md
Docs/Release/: V0_1_3_SMOKE_TEST.md  V0_1_9_INSTALL_VALIDATION.md  V0_1_9_SMOKE_TEST.md  V0_2_0_INSTALL_SCRIPT_VALIDATION.md  V0_2_0_SMOKE_TEST.md  V0_2_2_NIX_RELIABILITY_SMOKE_TEST.md  V0_2_3_SANDBOX_SMOKE_TEST.md  V0_2_4_RESTORE_SMOKE_TEST.md
Docs/Restore/: V0_2_4_RESTORE_AUDIT.md  V0_2_4_RESTORE_NOTES.md
Docs/Sandbox/: V0_2_3_SANDBOX_AUDIT.md  V0_2_3_SANDBOX_NOTES.md
Docs/v0.1/: 00_PRODUCT_BRIEF.md  01_PRD.md  02_TECH_SPEC.md  03_ROADMAP.md  04_IMPLEMENTATION_PLAN.md  05_CLI_SPEC.md  06_ARCHITECTURE.md  07_DATA_MODEL.md  08_TEST_PLAN.md  09_RELEASE_CHECKLIST.md  10_CODEX_BUILD_PROMPT.md  README.md
crates/root-agent/: Cargo.toml
crates/root-agent/src/: lib.rs
crates/root-cli/: Cargo.toml
crates/root-cli/src/: main.rs
crates/root-core/: Cargo.toml
crates/root-core/src/: brew.rs  events.rs  execution.rs  lib.rs  policy.rs
crates/root-doctor/: Cargo.toml
crates/root-doctor/src/: lib.rs
crates/root-lockfile/: Cargo.toml
crates/root-lockfile/src/: lib.rs
crates/root-nix/: Cargo.toml
crates/root-nix/src/: lib.rs
crates/root-sandbox/: Cargo.toml
crates/root-sandbox/src/: lib.rs
crates/root-snapshot/: Cargo.toml
crates/root-snapshot/src/: lib.rs
crates/root-verify/: Cargo.toml
crates/root-verify/src/: lib.rs
examples/: Rootfile  root.lock.example
homebrew-tap/Formula/: root.rb
remotion/: .eslintrc  Composition.tsx  CompositionShort.tsx  CompositionV2.tsx  CompositionV2Short.tsx  Root.tsx  package.json  pnpm-lock.yaml  tsconfig.json
remotion/assets/audio/: README.md
remotion/assets/recordings/: README.md
remotion/components/: Badge.tsx  CategoryGrid.tsx  CommandRenderer.tsx  FadeIn.tsx  Logo.tsx  SceneTitle.tsx  SplitScreen.tsx  Terminal.tsx  TerminalPlayback.tsx  Timeline.tsx  WorkflowPills.tsx
remotion/data/: catalog.ts  script-v2.ts  script.ts
remotion/scenes/: CatalogScene.tsx  FinalScene.tsx  FutureScene.tsx  HistoryScene.tsx  InstallScene.tsx  PlanScene.tsx  ProblemScene.tsx  RollbackScene.tsx  VerifyScene.tsx
remotion/scenes/short/: InstallShort.tsx  PlanShort.tsx  ProblemShort.tsx  ThesisShort.tsx
remotion/scenes/v2/: FinalSceneV2.tsx  (+8 more)
remotion/styles/: theme.ts
scripts/: build-release.sh  install.sh  test-install.sh
skills/claude/: SKILL.md
skills/codex/: AGENTS.md
skills/cursor/: root.mdc
skills/generic/: ROOT_AGENT_PROTOCOL.md
(+4 files in other folders)
