[package]
name = "root-snapshot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
root-lockfile = { path = "../root-lockfile" }
